I think, hope, pray, that the overflow issue is fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
-.bg-custom-gradient {
+.ocean {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
   background: rgb(2, 0, 36);
   background: linear-gradient(0deg, rgba(2, 0, 36, 1) 0%, rgba(32, 32, 175, 1) 35%, rgba(0, 212, 255, 1) 100%);
 }
@@ -131,7 +134,7 @@
   }
 
   100% {
-    margin-left: 200px;
+    margin-left: 10dvw;
   }
 }
 
